[package]
name = "rrss"
description = "Rust rss reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
colored = "2.1.0"
crossterm = "0.27.0"
html-escape = "0.2.13"
log = "0.4.21"
log4rs = "1.3.0"
open = "5.1.4"
ratatui = "0.27.0"
regex = "1.10.5"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tui-textarea = "0.5.1"


